Fix app titles wrapping

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -89,6 +89,7 @@ section:not(:last-of-type) {
 
             h3 {
                 margin-top: 0.5em;
+                text-wrap: nowrap;
             }
 
             img {
